fixed flicker

--- a/css/custom.css
+++ b/css/custom.css
@@ -42,6 +42,7 @@ section {
     cursor: pointer;
     filter: drop-shadow( 0px 0px 2px #aaa );
     opacity: 0.7;
+    transform: translateZ(0)
     
 }
 
